:rocket: gerado .jar do projeto